fix: Corriger URL Swagger Render